test/zinc_source/compile_errors/operators/16_unsupported_equality_operator.zn
// expected-error: operator '==' cannot be overloaded

struct Point {
    x: i64

    fn operator==(left, right) -> bool {
        return true
    }
}

fn main() {
    point = Point { x: 1 }
}
